syntax = "proto3";

option go_package = "proto/accommodation";

import "google/api/annotations.proto";

service AccommodationService {
  rpc GetAllAccommodations(AM_GetAllAccommodations_Request) returns (AM_GetAllAccommodations_Response) {
    option (google.api.http) = {
      get: "/accommodation"
    };
  }
  rpc CreateAccommodation(AM_CreateAccommodation_Request) returns (AM_CreateAccommodation_Response) {
    option (google.api.http) = {
      post: "/accommodation"
      body: "*"
    };
  }
  rpc GetAllPeriodsByAccommodation(AM_GetAllPeriodsByAccommodation_Request) returns (AM_GetAllPeriodsByAccommodation_Response) {
    option (google.api.http) = {
      get: "/accommodation/period/{id}"
    };
  }
  rpc CreatePeriod(AM_CreatePeriod_Request) returns (AM_CreatePeriod_Response) {
    option (google.api.http) = {
      post: "/accommodation/period",
      body: "*"
    };
  }
  rpc SearchAccommodations(AM_SearchAccommodations_Request) returns (AM_SearchAccommodations_Response) {
    option (google.api.http) = {
      post: "/accommodation/search",
      body: "*"
    };
  }
 }

message AM_GetAllAccommodations_Request {}

message AM_GetAllAccommodations_Response {
  repeated AccommodationDTO data = 1;
}

message AM_CreateAccommodation_Request {
  string name = 1;
  string benefits = 2;
  int32 minGuests = 3;
  int32 maxGuests = 4;
  double basePrice = 5;
}

message AM_CreateAccommodation_Response {
  string id = 1;
}

message AM_GetAllPeriodsByAccommodation_Request {
  string id = 1;
}

message AM_GetAllPeriodsByAccommodation_Response {
  repeated PeriodDTO data = 1;
}

message AM_CreatePeriod_Request {
  string start = 1;
  string end = 2;
  string accommodationId = 3;
  string userId = 4;
}

message AM_CreatePeriod_Response {
  string id = 1;
}

message AM_SearchAccommodations_Request {
  string start = 1;
  string end =  2;
  int32 numberOfGuests = 3;
  string location = 4;
}

message AM_SearchAccommodations_Response {
  repeated SearchedAccommodationsDTO data = 1;
}

message AccommodationDTO {
  string id = 1;
  string name = 2;
  string benefits = 3;
  int32 minGuests = 4;
  int32 maxGuests = 5;
  double basePrice = 6;
}

message PeriodDTO {
  string id = 1;
  string start = 2;
  string end = 3;
  string accommodationId = 4;
  string userId = 5;
}

message SearchedAccommodationsDTO {
  string id = 1;
  string name = 2;
  string benefits = 3;
  int32 minGuests = 4;
  int32 maxGuests = 5;
  string location = 6;
  double basePrice = 7;
  double totalPrice = 8;
}